--- a/src/main/resources/templates/view1.html
+++ b/src/main/resources/templates/view1.html
@@ -8,7 +8,7 @@
 	<body>
 
 		<h2>Top Secret</h2>
-
+	<form data-th-action="@{/}">
 		<div style="margin-bottom: 10px;">
 			<img src="/polar_bear.png" height="300">
 		</div>
@@ -17,5 +17,6 @@
 			<button>Logout</button>
 		</div>
 		
+	</form>
 	</body>
 </html>
